examples/test/testpolicy14234.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14234
  namespace: namespace232
spec:
  podSelector:
    matchLabels:
      key30: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value17
          key39: value13
      podSelector:
        matchLabels:
          key6: value49
          key10: value15
          key11: value48
